nginx-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    app: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
#        readinessProbe:
#          httpGet:
#            path: /
#            port: 80
#          initialDelaySeconds: 5
#          periodSeconds: 5
#        livenessProbe:
#          httpGet:
#            path: /
#            port: 80
#          initialDelaySeconds: 10
#          periodSeconds: 10
        volumeMounts:
        - name: webdata
          mountPath: /usr/share/nginx/html
      volumes:
      - name: webdata
        persistentVolumeClaim:
          claimName: nginx-pvc
