nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - protocol: TCP
      port: 80        # Port du Service dans le cluster
      targetPort: 80  # Port dans le conteneur
      nodePort: 30080 # Port exposé sur les nœuds (optionnel, KIND conseille souvent le port-forward)
